<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaludApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
   <string name="content_descripcion">Descripcion</string>
   <string name="Nombre">Nombre</string>
   <string name="Contrasena">Contrasena</string>
   <string name="btn_Ingresar">Ingresar</string>
   <string name="Bienvenido">Bienvenido</string>
   <string name="Transaccional" >Transaccional</string>
   <string name="Informacion">Informacion</string>
   <string name="Gestion_Referidos">Gestion De Referidos</string>
   <string name="Afiliacion">Afiliacion</string>
   <string name="Planes">Planes</string>
   <string name="Quienes_Somos">Quienes Somos</string>
   <string name="Ingresar_Referido">Ingresar Referido</string>
   <string name="Agenda">Agenda</string>
   <string name="Caracterizacion">Caracterizacion</string>
   <string name="Diamante">Diamante</string>
   <string name="Zafiro">Zafiro</string>
   <string name="Oro">Oro</string>
   <string name="Esmeralda">Esmeralda</string>
   <string name="Cobertura">Cobertura</string>
   <string name="descripcion_diamante">En minerologia el diamante del griego</string>
   <string name="descripcion_esmeralda">En minerologia la esmeralda del griego</string>
   <string name="cobertura">En minerologia el diamante y la esmeralda</string>
    <string name="olvido_contrasena"> <u>Olvido contrasena?</u> </string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
   <string name="primer_apellido">Primer Apellido</string>
   <string name="segundo_apellido">Segundo Apellido</string>
   <string name="nombres">Nombres</string>
   <string name="numero_id">Numero ID</string>
   <string name="fecha_nacimiento">Fecha Nacimiento</string>
   <string name="edad">Edad</string>
    <!-- Hints edittexts -->
   <string name="hint_dia"> dd</string>
   <string name="hint_mes"> mm</string>
   <string name="hint_ano"> aa</string>
    <string name="hint_vacio">  </string>
   
   <string name="hint_1erapellido">1er Apellido</string>
   <string name="hint_2doapellido">2do Apellido</string>
   <string name="hint_Nombres">Nombres</string>
    <string name="hint_Identificacion">Identificacion</string>
    <string name="hint_Correo">Correo</string>
   <string name="hint_Celular">Celular</string>
   <string name="hint_Telefonofijo">Fijo</string>
    <string name="hint_Direccion">Direccion</string>
    
    
    
    <string name="tipo_documento">Tipo Documento</string>
    <string name="celular">Celular</string>
    <string name="direccion">Direccion</string>
    <string name="genero">Genero</string>
    <string name="telefono_fijo">Tel. Fijo</string>
    <string name="correo">Correo Electronico</string>
    <string name="agendar">Agendar</string>
    <string name="caracterizar">Caracterizar</string>
    <string name="guardar">Guardar</string>
   
    
      
    
    
    
      <!--Spinner Tipo de documento -->
      
      <string-array name="tipo_documento_items">
          
       <item>CC</item>
       <item>TI</item>
       <item>Extranjeria</item>
          
          
      </string-array>
   
      <!--Spinner Genero -->
      <string-array name="genero_items">
          
       <item>Hombre</item>
       <item>Mujer</item>
 
        
      </string-array>
      
      
      <!-- Action bar  Icon -->
      <string name="usericon">Usuario</string>
      
      
      
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Ingresar Referido</item>
        <item >Agenda</item>
        <item >Caracterizar</item>
        <item >Afiliar</item>
        <item >Planes</item>
        <item >Quines Somos</item>
        <item >Salir</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/afiliar</item>
        <item>@drawable/calendar</item>
        <item>@drawable/estrella</item>
        <item>@drawable/ingresar</item>
        <item>@drawable/planes</item>
        <item>@drawable/quines</item>
        <item>@drawable/close</item>
    </array>
    
    
     <!--Afiliar -->

<string name="Informacion_beneficiarioyadicional">Informacion Beneficiario y Adicional</string>
    

 <!--Afiliar  login-->
 <string name="Ingrese_Cedula">Ingrese Cedula</string>
 <string name="btn_ingresar_afiliarlogin">Ingresar</string>
 <string name="hint_numerocedula"># Cedula</string>
 <string name="Validar">Validar</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>
