<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ImageView 
        android:contentDescription="@string/content_descripcion"
        android:id="@+id/diamante"
        android:layout_width="@dimen/dimen_diamante"
        android:layout_height="@dimen/dimen_diamante"
        android:src="@drawable/diamante"
        
        />
    <TextView 
        android:id="@+id/txt_contenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_diamante"
        android:layout_toRightOf="@+id/diamante"
       
           />
    
    <TextView 
        android:id="@+id/cobertura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cobertura"
        android:layout_below="@id/diamante"
        android:textSize="@dimen/letra_login"
        android:textStyle="bold"
        
        />
    <TextView 
        android:id="@+id/txt_cobertura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_diamante"
       android:layout_below="@+id/cobertura"
       
           />
    

</RelativeLayout>