<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saludapp.MainActivity" >

   <ImageView 
       android:contentDescription="@string/content_descripcion"
        android:layout_height="@dimen/largo_imaegn_coomeva"
        android:layout_width="@dimen/ancho_imagen_coomeva"
        android:id="@+id/img_coomeva"
        android:src="@drawable/coomeva"
       
       />
   
<ImageView 
       android:contentDescription="@string/content_descripcion"
        android:layout_height="@dimen/largo_imaegn_coomeva"
        android:layout_width="@dimen/ancho_imagen_coomeva"
        android:id="@+id/img_ceotic"
        android:layout_alignParentRight="true"
        android:src="@drawable/ceotic"
       
       />
<LinearLayout  
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_below="@+id/img_coomeva"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/lineaNombre"
    >
    <TextView  
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textSize="@dimen/letra_login"
        
         />
    <EditText 
        android:id="@+id/edNombre"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/letra_login"
        android:hint="@string/Contrasena"
        android:background="@color/gris"
        android:layout_marginLeft="@dimen/margen_edit_login"
        />
    
    
</LinearLayout>

   <LinearLayout  
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_below="@+id/lineaNombre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linea_contrasena"
    
    >
    <TextView  
        android:id="@+id/tvContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contrasena"
        android:textSize="@dimen/letra_login"
        
       
         />
    <EditText 
        android:id="@+id/edContrasena"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/letra_login"
        android:hint="@string/Contrasena"
        android:background="@color/gris"
        android:layout_marginLeft="@dimen/margen_edit_login"
        />
    
    
</LinearLayout>
  <Button 
      
       android:id="@+id/btn_Ingresar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/linea_contrasena"
       android:text="@string/btn_Ingresar"
       android:layout_centerHorizontal="true"
      
       android:layout_marginTop="@dimen/margen_edit_login"
      />

</RelativeLayout>
